--- a/src/components/layouts/BaseLayout/table.scss
+++ b/src/components/layouts/BaseLayout/table.scss
@@ -2,16 +2,17 @@
 .table-container {
   overflow-x: scroll;
 
-  $border-color: #cccccc;
+  --border-color: #cccccc;
+
   @media (prefers-color-scheme: dark) {
-    $border-color: $tCyan;
+    --border-color: #{$tCyan};
   }
 
   table {
     padding: 0;
     border-collapse: collapse;
     tr {
-      border-top: 1px solid $border-color;
+      border-top: 1px solid var(--border-color);
       background-color: white;
       @media (prefers-color-scheme: dark) {
         background-color: $tBlack;
@@ -26,7 +27,7 @@
       }
       th {
         font-weight: bold;
-        border: 1px solid $border-color;
+        border: 1px solid var(--border-color);
         text-align: left;
         margin: 0;
         padding: 0.5rem 1rem;
@@ -39,7 +40,7 @@
         }
       }
       td {
-        border: 1px solid $border-color;
+        border: 1px solid var(--border-color);
         text-align: left;
         margin: 0;
         padding: 6px 13px;
